schemars/tests/ui/repr_non_unit_variant.stderr
warning: unused import: `std::time`
 --> src/json_schema_impls/time.rs
  |
  | use std::time;
  |     ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error: JsonSchema_repr: must be a unit variant
 --> tests/ui/repr_non_unit_variant.rs:7:5
  |
7 |     EmptyTuple(),
  |     ^^^^^^^^^^^^
